--- a/LibretaForms/LibretaForms.vbproj
+++ b/LibretaForms/LibretaForms.vbproj
@@ -78,6 +78,12 @@
       <DependentUpon>frmLista.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmNuevo.Designer.vb">
+      <DependentUpon>frmNuevo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmNuevo.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -97,6 +103,9 @@
   <ItemGroup>
     <EmbeddedResource Include="frmLista.resx">
       <DependentUpon>frmLista.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNuevo.resx">
+      <DependentUpon>frmNuevo.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
